--- a/composer.json
+++ b/composer.json
@@ -10,4 +10,9 @@
     "require": {
         "symfony/var-dumper": "^5.2"
     }
+	"autoload": {
+        "psr-4": {
+            "tac-tac-toe\\": "app/"
+        }
+    }
 }
