--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,10 @@
     ],
     "require": {
         "symfony/var-dumper": "^5.2"
-    }
+    },
 	"autoload": {
         "psr-4": {
-            "App\\": "app/"
+            "App\\": "App/"
         }
     }
 }
