--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
     ],
     "require": {
         "symfony/var-dumper": "^5.2",
-        "ext-pdo": "^7.4"
+        "ext-pdo": "^7.4",
+        "twig/twig": "^3.3"
     },
 	"autoload": {
         "psr-4": {
